--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,3 +1,14 @@
-<% let name = "hmm" %> 
-
-<%- name %> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chat</title>
+</head>
+<body>
+    <form method="POST" action="/chat">
+        <input type="text" name="message" placeholder="Your message here"><br>
+        <input type="submit" value="Submit">
+      </form>
+</body>
+</html>
