--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
+    <style>
+        
+    </style>
 </head>
+
 <body>
     <form method="POST" action="/chat">
         <input type="text" name="message" placeholder="Your message here"><br>
         <input type="submit" value="Submit">
-      </form>
+    </form> 
+
+    <% for( let index = 0; index < messages.length; index++ ) { %>
+        <p id=<%-index%>><%- messages[index].message %> </p>
+    <% } %>
 </body>
+
 </html>
