--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
-    <script>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <script>/*
         const Http = new XMLHttpRequest();
         const url = 'http://localhost:3000/update';
         Http.open("GET", url);
@@ -14,18 +15,25 @@
         Http.onreadystatechange = (e) => {
             console.log(Http.responseText)
             location.reload();
-        }
+        }*/
     </script>
+    <style>
+        .Message {
+            font-family: sans-serif; 
+            font-size: 50px;
+            background-color: rgb(255, 0, 191);
+        }
+    </style>
 </head>
 
 <body>
-    <form method="POST" action="/chatt">
+    <form method="POST" action="/post_chat">
         <input type="text" name="message" placeholder="Your message here"><br>
         <input type="submit" value="Submit">
     </form>
 
     <% for( let index = 0; index < messages.length; index++ ) { %>
-    <p id=<%-index%>><%- messages[index].message %> </p>
+    <p class="Message" id=<%-index%>><%- eescape(messages[index].message) %> </p>
     <% } %>
 </body>
 
